[gd_scene load_steps=5 format=3 uid="uid://dyxdom84jffyd"]

[ext_resource type="Script" path="res://main/script/edit.gd" id="1_14033"]
[ext_resource type="Texture2D" uid="uid://bj4uh7lajasua" path="res://texturas/fondo3.png" id="2_j60rl"]
[ext_resource type="PackedScene" uid="uid://2ve5s300v8ol" path="res://main/escenas/file_scroll.tscn" id="3_pcjl0"]

[sub_resource type="Theme" id="Theme_fw3bs"]

[node name="edit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -2.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14033")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="fondo_columna" type="TextureRect" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_j60rl")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin_hizquierdo" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(0.065, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_fw3bs")
theme_override_colors/current_line_color = Color(1, 0.614053, 0.555934, 1)
theme_override_colors/background_color = Color(0, 0, 0, 0.54902)
theme_override_colors/selection_color = Color(1, 0, 0.262745, 1)
theme_override_colors/font_selected_color = Color(0, 0.145098, 0.329412, 1)
wrap_mode = 1
minimap_draw = true

[node name="margin_derecho" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="marco_derecho" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0

[node name="Margin_columna" type="MarginContainer" parent="CanvasLayer/HBoxContainer/marco_derecho"]
clip_contents = true
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="boton_load" type="Button" parent="CanvasLayer/HBoxContainer/marco_derecho"]
layout_mode = 2
text = "load"

[node name="boton_save" type="Button" parent="CanvasLayer/HBoxContainer/marco_derecho"]
layout_mode = 2
text = "save"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/HBoxContainer/marco_derecho"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
localize_numeral_system = false
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="columna_scroll" parent="CanvasLayer/HBoxContainer/marco_derecho/ScrollContainer" instance=ExtResource("3_pcjl0")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="load" type="FileDialog" parent="CanvasLayer"]
auto_translate_mode = 1
title = "Open a File"
position = Vector2i(40, 60)
size = Vector2i(398, 475)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*jpg , *.txt", "", "")
use_native_dialog = true

[node name="save" type="FileDialog" parent="CanvasLayer"]
position = Vector2i(40, 60)
size = Vector2i(398, 475)
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.txt")
use_native_dialog = true

[connection signal="pressed" from="CanvasLayer/HBoxContainer/marco_derecho/boton_load" to="." method="_on_boton_load_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/marco_derecho/boton_save" to="." method="_on_boton_save_pressed"]
[connection signal="file_selected" from="CanvasLayer/load" to="." method="_on_load_file_selected"]
[connection signal="file_selected" from="CanvasLayer/save" to="." method="_on_save_file_selected"]
